--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Assignment 1</title>
 </head>
 <body>
+    <!--header--section--start-->
     <header>
         <div class="header">
-            <div class="flower-contrent">
+            <div class="flower-container">
               <h1 class="flower-title">Let's mark beautiful flower's part of your life</h1>
               <p class="flower-riscription">Lorem ipsum dolor sit amet,
                 consectetur adipisicing elit. Ea minima dolore veritatis 
@@ -19,5 +20,45 @@
             <img class="flower-image" src="Flower/pngwing 10.png">
           </div>
     </header>
+    <!--header--section--start-->
+
+    <main>
+        <section>
+            <div class="section-title">Our Featured Flower's</div>
+            <p class="title-discription">Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Aut, veritatis.</p>
+             <div class="feauter-content">
+                <div class="img-box" style="background-color: #f0bfc8;">
+                    <img src="Flower/pngwing 6.png">
+                    <h4 class="flower-catagiry">Pank Flower Tree</h4>
+                </div>
+                <div class="img-box" style="background-color: #acdbdb;">
+                    <img src="Flower/pngwing 10.png">
+                    <h4 class="flower-catagiry">Pank Flower Tree</h4>
+                </div>
+                <div class="img-box" style="background-color: #c3e4c3;">
+                    <img src="Flower/pngwing 7.png">
+                    <h4 class="flower-catagiry">Pank Flower Tree</h4>
+                </div>
+             </div>   
+        </section>
+
+        <section>
+            <div class="delevary-contant">
+                <div class="delevary-box">
+                    <img src="Flower/Group 57.png">
+                    <h5 class="delevary-box-title">Some Day Delevary</h5>
+                </div>
+                <div class="delevary-box">
+                    <img src="Flower/Group 58.png">
+                    <h5 class="delevary-box-title">Fresh Flower</h5>
+                </div>
+                <div class="delevary-box">
+                    <img src="Flower/Group 59.png">
+                    <h5 class="delevary-box-title">24/7 Free Suport</h5>
+                </div>
+             </div>
+        </section>
+    </main>
 </body>
 </html>
