--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!--header--section--start-->
 
     <main>
+        <!--feauter--Section-start-->
         <section>
             <div class="section-title">Our Featured Flower's</div>
             <p class="title-discription">Lorem ipsum dolor sit amet consectetur 
@@ -42,7 +43,11 @@
                 </div>
              </div>   
         </section>
+        <!--feauter--Section-End-->
 
+
+
+        <!--Deleyvary--Section-start-->
         <section>
             <div class="delevary-contant">
                 <div class="delevary-box">
@@ -59,6 +64,26 @@
                 </div>
              </div>
         </section>
+        <!--Deleyvary--Section-end-->
+
+
+
+
+        <!--hot--dea--Section-start-->
+        <section>
+            <div class="hot-dea-contant">
+                <div class="hot-dea-main">
+                    <h2 class="hot-dea-title">Hot Dea! Sale Up 25% <span class="span-off">Off</span></h2>
+                    <p class="hot-dea-description">Lorem ipsum dolor sit, amet consectetur 
+                    adipisicing elit. Iste recusandae eos aut placeat quae doloribus
+                    pariatur, nisi debitis aliquid quia.</p>
+                    <button class="btn hot-dea-button">Hot Dea</button>
+                </div>
+                <img src="Flower/pngwing 8.png">
+            </div>
+        </section>
+        <!--hot--dea--Section-End-->
+
     </main>
 </body>
 </html>
