added get the latest deals

--- a/index.html
+++ b/index.html
@@ -84,6 +84,53 @@
         </section>
         <!--hot--dea--Section-End-->
 
+
+
+
+        <!--instagram--Section--start-->
+        <section>
+            <h1 class="section-title">Instagram</h1>
+            <p class="title-discription">Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Aut, veritatis.</p>
+                <div class="instagram-content">
+                    <div class="instagram-box-img">
+                        <img src="Flower/Flower 01.png">
+                    </div>
+                    <div class="instagram-box-img">
+                        <img src="Flower/Rectangle 4.png">
+                    </div>
+                    <div class="instagram-box-img">
+                        <img src="Flower/Rectangle 5.png">
+                    </div>
+                    <div class="instagram-box-img">
+                        <img src="Flower/Rectangle 6.png">
+                    </div>
+                </div>
+        </section>
+        <!--instagram--Section--End-->
+
+
+
+
+        <!--subiscrib--section--start-->
+        <section>
+            <div class="subiscribe-section">
+                <div class="subiscribe-contant">
+                    <h1 class="subiscrib-title">Get The Latest Deals</h1>
+                    <p class="subiscribe-describtion">Subesceibe Our Website button </p>
+                </div>
+                <div class="form-input">
+                    <form action="">
+                        <label for="subiscrib">
+                            <input type="text" placeholder="Enter Your Comment">
+                        </label>
+                        <input type="submit" value="Subiscribe">
+                     </form>
+                </div>
+            </div>
+        </section>
+        <!--subiscrib--section--start-->
+
     </main>
 </body>
 </html>
