--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="form-input">
                     <form action="">
                         <label for="subiscrib">
-                            <input type="text" placeholder="Enter Your Comment">
+                            <input type="email" placeholder="Enter Your Email">
                         </label>
                         <input type="submit" value="Subiscribe">
                      </form>
@@ -130,7 +130,22 @@
             </div>
         </section>
         <!--subiscrib--section--start-->
-
     </main>
+
+
+
+    <footer>
+        <div class="footer-content">
+            <h2 class="footer-title"><span class="footer-span">Flower</span>Shop</h2>
+            <p class="footer-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Accusantium, fuga.</p>
+            <div class="cradet">
+                &copy;Naofel Badsha As A Profetional Webdevloper
+            </div>
+        </div>
+    </footer>
+
+
+
 </body>
 </html>
